# cyberimmune-traffic-light

./: CMakeLists.txt  cross-build.sh  readme.md
common/: CMakeLists.txt
common/include/: ILightMode.idl.hpp  NkArena.hpp
common/src/trafficlight/: ILightMode.idl.cpp
docs/: build.sh  hla.puml
einit/: CMakeLists.txt
einit/src/: diagnostics.psl  init.yaml.in  light_modes.psl  network.psl  security.psl  security.psl.in
gpio_mock_driver/: CMakeLists.txt
gpio_mock_driver/resources/: GPIO.edl
gpio_mock_driver/src/: main.cpp
include/: log.hpp
libcommon/: CMakeLists.txt
libcommon/include/: IDiagnostics.idl.hpp  IExternalControl.idl.hpp  IExternalDiagnostics.idl.hpp  ILightMode.idl.hpp  ITargetState.idl.hpp  mode.hpp
libcommon/src/: IDiagnostics.idl.cpp  IExternalControl.idl.cpp  IExternalDiagnostics.idl.cpp  ILightMode.idl.cpp  ITargetState.idl.cpp  log.cpp
libxnk/: CMakeLists.txt
libxnk/include/: XNkArena.hpp  XNkKosTransport.hpp  XNkKosTransportServer.hpp  XNkNameService.h
resources/: CMakeLists.txt
resources/cdl/: CDiagnostics.cdl  CExternalControl.cdl  CLightMode.cdl  CTargetState.cdl
resources/edl/: Control.edl  Diagnostics.edl  GPIO.edl  Link.edl
resources/idl/: IDiagnostics.idl  IExternalControl.idl  IExternalDiagnostics.idl  ILightMode.idl  ITargetState.idl
server/: app.py  commands.py  models.py  utils.py
server/static/: index.html
tl_control/: CMakeLists.txt
tl_control/src/: DiagnosticsReceiver.hpp  Logger.hpp  StateController.hpp  main.cpp
tl_diagnostics/: CMakeLists.txt
tl_diagnostics/src/: DiagnosticsController.h  DiagnosticsController.hpp  main.cpp
tl_gpio/: CMakeLists.txt
tl_gpio/include/: mode.h
tl_gpio/src/: LightModeController.hpp  main.cpp
tl_link/: CMakeLists.txt
tl_link/src/: client.hpp  httpclient.hpp  jsonbody.hpp  main.cpp  sender.hpp
